# openpilot

./: .gitignore  CMakeLists.txt  Makefile  README-NIXOS.md  shell.nix
cmake/: FindCython.cmake  UseCython.cmake
common/: CMakeLists.txt  params_pxd.pxd  spinner.py
common/kalman/: CMakeLists.txt
common/transformations/: CMakeLists.txt
phonelibs/: CMakeLists.txt
phonelibs/json11/: CMakeLists.txt  json11.cpp
phonelibs/libyuv/: CMakeLists.txt
phonelibs/nanovg/: CMakeLists.txt  nanovg.c
phonelibs/nanovg/include/nanovg/: nanovg_gl.h  stb_truetype.h
phonelibs/qpoases/: CMakeLists.txt
phonelibs/qpoases/INCLUDE/: Bounds.hpp  Constraints.hpp  CyclingManager.hpp  Indexlist.hpp  MessageHandling.hpp  QProblem.hpp  QProblemB.hpp  SubjectTo.hpp  Utils.hpp
phonelibs/qpoases/INCLUDE/EXTRAS/: SolutionAnalysis.hpp
phonelibs/qpoases/SRC/: Bounds.cpp  Constraints.cpp  CyclingManager.cpp  Indexlist.cpp  MessageHandling.cpp  QProblem.cpp  QProblemB.cpp  SubjectTo.cpp  Utils.cpp
phonelibs/qpoases/SRC/EXTRAS/: SolutionAnalysis.cpp
phonelibs/snpe/: CMakeLists.txt
selfdrive/: CMakeLists.txt  logmessaged.py  manager.py  pandad.py  version.py
selfdrive/boardd/: CMakeLists.txt  boardd.cc  can_list_to_can_capnp.cc  panda.cc  panda.h  pigeon.cc
selfdrive/camerad/: CMakeLists.txt  main.cc
selfdrive/camerad/cameras/: camera_common.cc  camera_frame_stream.cc  camera_qcom.cc  camera_qcom2.cc  camera_webcam.cc
selfdrive/camerad/imgproc/: utils.cc
selfdrive/camerad/include/selfdrive/camerad/cameras/: camera_common.h  camera_qcom.h  camera_webcam.h
selfdrive/camerad/transforms/: rgb_to_yuv.cc
selfdrive/clocksd/: CMakeLists.txt  clocksd.cc
selfdrive/common/: CMakeLists.txt  cqueue.c  gpio.cc  i2c.cc  params.cc  swaglog.cc  version.h
selfdrive/common/gpucommon/: CMakeLists.txt  clutil.cc  glutil.c  visionimg.cc
selfdrive/common/gpucommon/include/selfdrive/common/gpucommon/: visionimg.h
selfdrive/common/testparams/: CMakeLists.txt  test_params.cc
selfdrive/common/visionipc/: CMakeLists.txt
selfdrive/controls/: CMakeLists.txt
selfdrive/controls/lib/cluster/: CMakeLists.txt  fastcluster.cpp  fastcluster_py.py  test.cpp
selfdrive/controls/lib/cluster/include/private/fastcluster/: fastcluster_R_dm.hpp  fastcluster_dm.hpp
selfdrive/controls/lib/lateral_mpc/: CMakeLists.txt  libmpc_py.py
selfdrive/controls/lib/longitudinal_mpc/: CMakeLists.txt  libmpc_py.py
selfdrive/locationd/: CMakeLists.txt  ublox_msg.cc  ublox_msg.h  ubloxd.cc  ubloxd_main.cc  ubloxd_test.cc
selfdrive/loggerd/: CMakeLists.txt  encoder.cc  encoder.h  logger.cc  loggerd.cc  raw_logger.cc
selfdrive/loggerd/tests/: testraw.cc
selfdrive/modeld/: CMakeLists.txt  SConscript  dmonitoringmodeld.cc  modeld.cc
selfdrive/modeld/include/selfdrive/modeld/models/: dmonitoring.h  driving.h
selfdrive/modeld/include/selfdrive/modeld/transforms/: loadyuv.h  transform.h
selfdrive/modeld/models/: commonmodel.cc  dmonitoring.cc  driving.cc
selfdrive/modeld/runners/: onnxmodel.cc  snpemodel.cc
selfdrive/modeld/transforms/: loadyuv.cc  transform.cc
selfdrive/proclogd/: CMakeLists.txt  proclogd.cc
selfdrive/sensord/: CMakeLists.txt  gpsd.cc  sensors_qcom.cc  sensors_qcom2.cc
selfdrive/sensord/sensors/: bmx055_accel.cc  bmx055_gyro.cc  bmx055_magn.cc  bmx055_temp.cc  file_sensor.hpp  i2c_sensor.hpp  light_sensor.cc  lsm6ds3_accel.cc  lsm6ds3_gyro.cc  lsm6ds3_temp.cc  sensor.hpp
selfdrive/ui/: CMakeLists.txt  paint.cc  sound.hpp  ui.cc  ui.hpp
selfdrive/ui/android/: sl_sound.cc  ui.cc
selfdrive/ui/android/spinner/: spinner.c
selfdrive/ui/android/text/: text.c
selfdrive/ui/qt/: home.cc  home.hpp  qt_sound.cc
selfdrive/ui/qt/offroad/: onboarding.cc  settings.cc  wifi.cc  wifi.hpp  wifiManager.cc
selfdrive/ui/qt/widgets/: drive_stats.cc  offroad_alerts.cc
tools/: autoignite.py
